# classfile

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
classfile_macros/: Cargo.toml
classfile_macros/src/: lib.rs
src/: access.rs  attribute.rs  class_reader.rs  constant_pool.rs  constants.rs  error.rs  events.rs  field.rs  frame.rs  handle.rs  label.rs  lib.rs  opcodes.rs  type_annotation.rs
src/tree/: annotation.rs
test_data/: InvisibleAnnotation.java  InvisibleTypeAnnotation.java  TestAnnotations.java  TestDeprecated.java  TestInnerClass.java  TestInterfaces.java  TestLocalClass.java  TestSealedClass.java  TestSignature.java  TestSyntheticClass.java  VisibleAnnotation.java  VisibleTypeAnnotation.java  module-info.java
test_data/pkg/: ClassInPackage.java
test_data/pkg2/: ClassInPackage2.java
test_helpers/: Cargo.toml  build.rs
test_helpers/src/: lib.rs
